CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.0

 Release Details:
  44:
   ArrayChar.makeString() needs to check string len
   Array.arrayCopy() now deals with src not in canonical order. mostly affected aggregation of datasets which
     do sectioning in memory, such as GINI.
   TDS: remote station data
   add List<Station> StationCollection.getStations(String[] names);
   CdmRemoteDatasetFactory now handles any type of cdmRemote dataset, including Grid.
  43:
   add Variable.setCachedData check for correct array type
   WRF, ADAS CoordSysBuilder makeSoilCoordintae had wrong datatype
   ToolsUI Viewer: write local file
   NetcdfFileWriteable: change att names to legal and give warning rather than exception
  42:
   Fmrc must enhance datasets when acquiring.
   Use FeatureType.ANY instead of FeatureType.NONE
   upgrade protobuf library to 2.1.0
   grib index performance enhancements
   ucar.units enhancement
   nexrad2 bug fixes
   ucar.nc2.dataset.grid is removed, since it can no longer be made to work.
   VerticalTransformCT no longer keeps copy of VerticalTransform, since different coordSys may need different functions.
     Now the VerticalTransform is kept in GridCoordSys, which is the only place that it was used. 
     VerticalTransformCT is now immutable, so it can be shared safely.
   FmrcImpl: dont remove _CoordinateAxes
   ncml: check namespace is correct
   enhanceProxy: throw exception if coordSystem is null
   cdmremote replaces ncstream
   point: add calcBounds() to iterator, collections, datasets
  40:
   CF 1.4 multidim case when time is 1 dimensional
   overflow in IndexChunker when writing large files
   DateType was accepting invalid ISO strings.
   grib indexing: binary indexes dont return unknown params
   grib1 param table reading: make thread safe for TDS
   new visad.jar
   Bufr: was not getting missing data correct when compressed