@@ -165,6 +165,7 @@ public class CoordSysBuilder implements CoordSysBuilderIF {
     registerConvention("NSSL National Reflectivity Mosaic", NsslRadarMosaicConvention.class, null);
     registerConvention("FslWindProfiler", FslWindProfiler.class, null);
     registerConvention("ModisSatellite", ModisSatellite.class, null);
+    registerConvention("AvhrrSatellite", AvhrrConvention.class, null);
 
     // further calls to registerConvention are by the user
     userMode = true;
