@@ -1,34 +1,40 @@
 <title>Troubleshooting</title>
 <h1><img src="../images/THREDDSlogo.jpg" width="67" height="54">Troubleshooting
 </h1>
-<div class="head">
-  <address>
-  </address>
   <hr>
-  <h2>Creating the TDS Configuration Catalog</h2>
+  <h2>Check log files for errors</h2>
+  <ol>
+    <li><strong>${tomcat.home}/logs/catalina.out: </strong>This is where Tomcat prints messages about  Tomcat startup and uncaught exceptions from any webapp.</li>
+    <li><strong>${tomcat.home}/logs/localhost.{date}.log</strong>: This is where log messages for Tomcat are sent.</li>
+    <li><strong> ${tomcat.home}/content/thredds/logs/serverStartup.log</strong>: As TDS starts up, it logs messages here. Errors and warnings in your catalog configuration files are shown here.</li>
+    <li><strong> ${tomcat.home}/content/thredds/logs/threddsServlet.log</strong>: Each request that the TDS responds to gets logged here. Errors and warnings that are associated with a request are logged here.</li>
+    <li><strong> ${tomcat.home}/content/thredds/logs/models.log</strong>: Errors and warning specific to gridded data may be shown here (optional).</li>
+  </ol>
+  <h2>Common errors in the TDS Configuration Catalogs:</h2>
   <h3>Duplicate path(s)</h3>
   <p>If you accidentally use the same path in more than one data root, you will get an error in catalog.</p>
   <pre>  &lt;datasetRoot path=&quot;testdup&quot; location=&quot;C:/data/&quot; /&gt;<br>  &lt;datasetScan name=&quot;duplicate path&quot; path=&quot;testdup&quot; location=&quot;/home/workshop/data/&quot; serviceName=&quot;dodsServer&quot; /&gt;
 
-In https://localhost:8443/thredds/content/logs/<strong>catalogErrors.log</strong>:
+
+  In ${tomcat.home}/content/thredds/logs/serverStartup.log:
   **Error: <strong>already have dataRoot</strong> =&lt;testdup&gt;  <strong>mapped to directory</strong>= &lt;C:/data/&gt; wanted to map to=&lt;/home/workshop/data/&gt; in catalog</pre>
   <h3>Data directory doesnt exist</h3>
   <pre>   &lt;datasetRoot path=&quot;sage&quot; location=&quot;C:/data/notexist/&quot; /&gt;
 
-In https://localhost:8443/thredds/content/logs/<strong>catalogErrors.log</strong>:
+  In ${tomcat.home}/content/thredds/logs/serverStartup.log:
   **Error: Data Root =sage <strong>directory</strong>= &lt;C:/data/notexist/&gt; <strong>does not exist</strong></pre>
   <h3>DatasetScan has missing or invalid service</h3>
   <pre>  &lt;datasetScan name=&quot;bad service name&quot; path=&quot;segundo&quot; location=&quot;C:/data/&quot; serviceName=&quot;badd&quot; /&gt;
   &lt;datasetScan name=&quot;no service name&quot; path=&quot;tertiary&quot; location=&quot;C:/data/&quot; /&gt;</pre>
-  <pre>In https://localhost:8443/thredds/content/logs/<strong>catalogErrors.log</strong>:
+  <pre>  In ${tomcat.home}/content/thredds/logs/serverStartup.log:
   **Error: DatasetScan (Top Dataset/bad service name ): <strong>must have a default service</strong>
   **Error: DatasetScan (Top Dataset/no service name): <strong>must have a default service</strong></pre>
   <h3>Data not compatible with service</h3>
   <pre>  &lt;dataset name=&quot;inappropriate service&quot; urlPath=&quot;images/labyrinth.jpg&quot; serviceName=&quot;dodsServer&quot; dataType=&quot;Grid&quot; /&gt;
 </pre>
   <ul>
-    <li>No error in <strong>catalogErrors.log</strong></li>
-    <li>If you try to access it: 
+    <li>You wont get an error in <strong>serverStartup.log</strong></li>
+    <li>But when you try to access it: 
       <ul>
         <li><em>Browser<strong>: DODServlet ERROR: Cant read C:/data/images/labyrinth.jpg: not a valid NetCDF file. </strong></em></li>
         <li>nj22/IDV:: <em><strong>Lexical error at line 1, column 1.  Encountered: &quot;&quot; (0), after : &quot;&quot;</strong></em></li>
@@ -38,7 +44,7 @@ In https://localhost:8443/thredds/content/logs/<strong>catalogErrors.log</strong
   <h3>Data file does not exist </h3>
   <pre>  &lt;dataset name=&quot;no data (opendap)&quot; ID=&quot;Y&quot; urlPath=&quot;images/labyrinth.nc&quot; serviceName=&quot;dodsServer&quot; dataType=&quot;Grid&quot; /&gt;</pre>
   <ul>
-    <li>No error in <strong>catalogErrors.log</strong></li>
+    <li>You wont get an error in <strong>serverStartup.log</strong></li>
     <li>If you try to access it (OPeNDAP)
       <ul>
           <li><em>Browser<strong>: message = "Cant find images/labyrinth.nc"</strong></em></li>
@@ -52,12 +58,13 @@ In https://localhost:8443/thredds/content/logs/<strong>catalogErrors.log</strong
             </ul>
     </li>
   </ul>
+  <h3>&nbsp;</h3>
   <h3>DatasetScan points to an empty directory </h3>
   <p>Aggregation scan points to an empty directory</p>
   <p>Duplicate ids </p>
 </div>
 <hr WIDTH="100%">
 <address>
-<img src="../images/thread.png" width="110" height="108">This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on Oct 24, 2006
+<img src="../images/thread.png" width="110" height="108">This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> and was last updated on May 27, 2009
 </address>
 <p>&nbsp;</p>
