@@ -17,12 +17,13 @@
 <h3><a href="BasicConfig.html">2. Basic TDS Configuration</a></h3>
 <ul>
   <li>THREDDS Catalog Review</li>
-  <li>TDS Configuration Catalogs</li>
-  <ul>
-    <li>Overview</li>
-    <li>Configuration directory</li>
-    <li>Root catalog</li>
-  </ul>
+  <li>TDS Configuration Catalogs
+    <ul>
+      <li>Overview</li>
+      <li>Configuration directory</li>
+      <li>Root catalog</li>
+    </ul>
+  </li>
 </ul>
 <h3><a href="BasicTomcatAndTDSSecurity.html">3. Basic Tomcat and TDS Security</a></h3>
 <ul>
