@@ -6,7 +6,10 @@ Changes in version 4.0
 
  Release Details:
   44:
+   TDSRadarDatasetCollection improvements
+   AvhrrSatellite Convention - start of Image datatype
    ArrayChar.makeString() needs to check string len
+   CFpointObs: station unlimited dimension case
    Array.arrayCopy() now deals with src not in canonical order. mostly affected aggregation of datasets which
      do sectioning in memory, such as GINI.
    TDS: remote station data
